# qp_ipm

./: CMakeLists.txt  README.md  main.cpp
include/: ipm.h  linesearch.h  optimdata.h
src/: ipm.cpp  linesearch.cpp  optimdata.cpp
